--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,12 +5,13 @@
     
     <!-- Content -->
     <section class="main home-page">
-      @@include('../components/base/navbar.html', {active: 1})
+      <!-- @@include('../components/base/navbar.html', {active: 1}) -->
+      @@include('../components/base/navbar-without-login.html', {active: 1})
 
       <!-- content -->
-      @@include('../components/home/content.html')
+      <!-- @@include('../components/home/content.html') -->
       <!-- content -->
-      @@include('../components/home/home-help.html')
+      <!-- @@include('../components/home/home-help.html') -->
 
       
     </section>
