--- a/src/pages/home-without-login.html
+++ b/src/pages/home-without-login.html
@@ -8,9 +8,9 @@
       @@include('../components/base/navbar-without-login.html', {active: 1})
 
       <!-- content -->
-      @@include('../components/home/content.html')
+      <!-- @@include('../components/home/content.html') -->
       <!-- content -->
-      @@include('../components/home/home-help-without-login.html')
+      <!-- @@include('../components/home/home-help-without-login.html') -->
 
       
     </section>
