--- a/src/pages/world-cup.html
+++ b/src/pages/world-cup.html
@@ -14,7 +14,8 @@
       </div>
 
       <!-- content -->
-      <div class="world-cup-page__top-banner" data-i18n="world_up_page.top_banner"></div>
+      <div class="world-cup-page__top-banner d-none d-lg-block" data-i18n="world_up_page.top_banner"></div>
+      <div class="world-cup-page__top-banner d-block d-lg-none" data-i18n="world_up_page.top_banner_mobile"></div>
       <div class="world-cup-block__content">
         <div class="container world-cup-page__container">
           <div class="block-content text-center">
