--- a/src/pages/home-without-login.html
+++ b/src/pages/home-without-login.html
@@ -12,6 +12,7 @@
       <!-- content -->
       <!-- @@include('../components/home/home-help-without-login.html') -->
 
+      @@include('../components/event-icon.html')
       
     </section>
     @@include('../components/base/navbar-bottom.html', {active: 0})
