--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,10 +13,7 @@
       <!-- content -->
       <!-- @@include('../components/home/home-help.html') -->
 
-      <div class="event-icon alert alert-dismissible fade show" role="alert">
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        <a href="/world-cup.html" data-i18n="world_up_page.event_icon"></a>
-      </div>
+      @@include('../components/event-icon.html')
       
     </section>
     @@include('../components/base/navbar-bottom.html', {active: 0})
