--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,7 @@
       @@include('../components/base/navbar-without-login.html', {active: 1})
 
       <!-- content -->
-      <div class="event-page__top-banner container" data-i18n="world_up_page.top_banner"></div>
+      <div class="event-page__top-banner container" data-i18n="event_page.top_banner"></div>
       <div class="event-block__content">
         <div class="container event-page__container">
           @@include('../components/content.html')
