--- a/src/pages/mobile.html
+++ b/src/pages/mobile.html
@@ -5,10 +5,10 @@
     
     <!-- Content -->
     <section class="main event-block event-page">
-      @@include('../components/base/navbar-child.html', {back_url: '/', title: 'world_up_page.header'})
+      @@include('../components/base/navbar-child.html', {back_url: '/', title: 'event_page.header'})
 
       <!-- content -->
-      <div class="event-page__top-banner" data-i18n="world_up_page.top_banner_mobile"></div>
+      <div class="event-page__top-banner" data-i18n="event_page.top_banner_mobile"></div>
       <div class="event-block__content">
         <div class="container event-page__container">
           @@include('../components/content.html')
