--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
-  @@include('../components/base/header.html', {title: 'World Cup'})
+  @@include('../components/base/header.html', {title: 'CHINESE NEW YEAR ANGPOW RAIN'})
   <body>
     
     <!-- Content -->
