--- a/src/pages/mobile.html
+++ b/src/pages/mobile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
-  @@include('../components/base/header-mobile.html', {title: 'World Cup'})
+  @@include('../components/base/header-mobile.html', {title: 'CHINESE NEW YEAR ANGPOW RAIN'})
   <body>
     
     <!-- Content -->
